z-index issue fixed

--- a/tetrapak-publicweb/ui.dev/src/source/templates/components/header/_header.scss
+++ b/tetrapak-publicweb/ui.dev/src/source/templates/components/header/_header.scss
@@ -36,6 +36,7 @@
             position: fixed;
             background: $color-white;
             width: 100%;
+            z-index: $zindex-header;
             .header-items {
                 height: 34px;
             }
